--- a/content/blog/2025-01-03-2025.md
+++ b/content/blog/2025-01-03-2025.md
@@ -35,7 +35,7 @@ This year, finding a word has been a struggle. The one that immediately comes to
 
 I've long believed that the best parts of life are the people around us. This year, those people are my focus.
 
-So, in the spirit of connecting with you, the reader (whoever you are), here are some goals and promises I'm making making going forward.
+So, in the spirit of connecting with you, the reader (whoever you are), here are some goals and promises I'm making going forward.
 
 1. Call at least one long-distance friend every month
     - Or more if they don't mind!
